# DFS-packed

./: README.md
DFS-Client/: CMakeLists.txt  README.md
DFS-Client/Base_Classes/: Server_Group.cpp
DFS-Client/Client_Server/: main_client_server.cpp
DFS-Master/: CMakeLists.txt  README.md  main.cpp
DFS-Slave/: CMakeLists.txt  README.md
DFS-Slave/Slave_Server/: main_slave_server.cpp
DFS-Slave/utils/: Network_utils.c  Network_utils.h  Server_Message.cpp  Server_Message.h
